<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >
    <item
        android:id="@+id/search_icon"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>

    <item
        android:id="@+id/sort_icon"
        android:icon="@drawable/ic_sort_menu"
        android:title="@string/sort"
        app:showAsAction="ifRoom">
        <menu>
            <group android:id="@+id/group"
                android:checkableBehavior="single">
            <item
                android:id="@+id/salarySort"
                android:title="@string/salarySort"
                app:showAsAction="ifRoom"
                />

            <item
                android:id="@+id/noSort"
                android:title="@string/noSort"
                android:checked="true"

                app:showAsAction="ifRoom"
                />
            </group>
        </menu>
    </item>

</menu>